5th Commit        修复少许已知BUG；        增加了非周期型注意点的创建，但未提供其详情界面，完善更改了其实体类，更改了数据库Schema及Care类，提供了非周期型注意点及其Records在数据库中的增删查改功能